blog slder image add

--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -403,7 +403,7 @@
 									<ul class="list list_margin-20px margin-top-30">
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill" data-text="Front-end Development">Front-end Development</div>
+											<div class="headline-xxxxs anim-text-fill" data-text="SMM">SMM</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-02" data-text="97%">97%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="97%">
 												<div class="progress-bar__line js-progress-animate"></div>
@@ -413,7 +413,7 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-01" data-text="Graphic Design">Graphic Design</div>
+											<div class="headline-xxxxs anim-text-fill tr-delay-01" data-text="SMO">SMO</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-03" data-text="93%">93%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="93%">
 												<div class="progress-bar__line js-progress-animate tr-delay-01"></div>
@@ -423,9 +423,9 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="Back-end Development">Back-end Development</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-04" data-text="100%">100%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
+											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="SEO">SEO</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-04" data-text="96%">96%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="96%">
 												<div class="progress-bar__line js-progress-animate tr-delay-02"></div>
 												<div class="progress-bar__line red js-progress-animate tr-delay-03"></div>
 											</div>
@@ -433,7 +433,7 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-03" data-text="UI/UX Design">UI/UX Design</div>
+											<div class="headline-xxxxs anim-text-fill tr-delay-03" data-text="Email Marketing">Email Marketing</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-05" data-text="98%">98%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="98%">
 												<div class="progress-bar__line js-progress-animate tr-delay-03"></div>
@@ -444,8 +444,8 @@
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
 											<div class="headline-xxxxs anim-text-fill tr-delay-04" data-text="Motion Design">Motion Design</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="86%">86%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="86%">
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="96%">96%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="96%">
 												<div class="progress-bar__line js-progress-animate tr-delay-04"></div>
 												<div class="progress-bar__line red js-progress-animate tr-delay-05"></div>
 											</div>
@@ -453,7 +453,17 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-05" data-text="Brand Strategy">Brand Strategy</div>
+											<div class="headline-xxxxs anim-text-fill tr-delay-05" data-text="Brand Building">Brand Building</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-07" data-text="93%">93%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="93%">
+												<div class="progress-bar__line js-progress-animate tr-delay-05"></div>
+												<div class="progress-bar__line red js-progress-animate tr-delay-06"></div>
+											</div>
+										</li><!-- progress-box end -->
+
+										<!-- progress-box start -->
+										<li class="list__item progress-bar">
+											<div class="headline-xxxxs anim-text-fill tr-delay-05" data-text="Mobile marketing">Mobile marketing</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-07" data-text="93%">93%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="93%">
 												<div class="progress-bar__line js-progress-animate tr-delay-05"></div>
