--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -370,7 +370,8 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/modern-design/photo-of-man-jumping-on-pavement-3329728-2.jpg" alt="Post">
+											<img class="img-hover-scale" src="https://images.pexels.com/photos/2764678/pexels-photo-2764678.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Post">
+											<!-- <img class="img-hover-scale" src="assets/images/posts/modern-design/photo-of-man-jumping-on-pavement-3329728-2.jpg" alt="Post"> -->
 										</div>
 									</div>
 								</a>
@@ -442,7 +443,7 @@
 								<a href="#0" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/home-studio/pexels-3355420-2.jpg" alt="Post">
+											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1491951931722-5a446214b4e2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8c29jaWFsJTIwbWVkaWF8ZW58MHwxfDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Post">
 										</div>
 									</div>
 								</a>
