image update blog

--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -218,7 +218,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/essential/horizontal essential.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/essential/horizontal-essential.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Three Essential Digital Marketing</span>
@@ -246,7 +246,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="Revolution-in-digital-Space.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/digital-revolution/vertical dR.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/digital-revolution/vertical-dr.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Revolution in digital Space</span>
@@ -274,7 +274,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/refine-marketing/horizontal target.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/refine-marketing/horizontal-target.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">You Have a chance to Refine Your </span>
@@ -302,7 +302,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal hosting.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Top Choices In</span>
@@ -367,7 +367,7 @@
 								<a href="top-choices-in-web-hosting.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/vertical hosting.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/vertical-hosting.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
@@ -430,7 +430,7 @@
 								<a href="Revolution-in-digital-Space.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal  dr.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
@@ -443,7 +443,7 @@
 								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical target.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
