--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1514580426463-fd77dc4d0672?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fGRpZ2l0YWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical target.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
