index correction blog image

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical target.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
