--- a/academy.html
+++ b/academy.html
@@ -373,14 +373,14 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-l">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Learn It</span>
+										<span class="anim-slide tr-delay-03">Learn It <span class="text-color-red">&</span> Earn It</span>
+									</span>
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-04"> </span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04"> <span class="text-color-red">&</span></span>
-									</span>
-									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04">Earn It</span>
-									</span>
+										<span class="anim-slide tr-delay-04"></span>
+									</span> -->
 								</h2>
 								<!-- <p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br>
 								<div class="margin-top-30 anim-fade tr-delay-08">
@@ -434,9 +434,8 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="digital-marketing.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="course">
-							</a>
+							<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="course">
+
 						</div><!-- column end -->
 						<!-- column start -->
 						<div class="four-columns column-50-100 padding-top-30">
@@ -449,7 +448,8 @@
 											Vegan four loko
 										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">
-											Digital Marketing is one of the fastest growing sectors in the world. Digital Marketing is a New-Age form of marketing. To put it simple, Digital Marketing is internet marketing, from which we can market our products or services to any part of the country with the help of online platform such as Google, Bing, Websites, Social Media, Email and Mobile Applications.</p>
+											Choosing a career path is a daunting process. You’re supposed to find something you love while also factoring in things like long-term stability and supporting the overall lifestyle you want. A digital marketing career isn’t necessarily the dream job most people aspire to while they’re in school. But when you consider the opportunities in this dynamic field, you’ll see that the digital marketing career outlook is nothing but positive and will continue to be so in 2021...
+										</p>
 									</div>
 									<a href="digital-marketing.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
@@ -477,7 +477,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 											Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great...</p>
 									</div>
-									<a href="web-development.html" class="skew-btn js-pointer-large">
+									<a href="#0" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
