--- a/contact.html
+++ b/contact.html
@@ -300,16 +300,18 @@
 				<div class="pos-rel flex-min-height-100vh">
 					<div class="padding-top-bottom-120 container small after-preloader-anim">
 						<!-- title start -->
+
 						<h2 class="headline-xl">
 							<span class="hidden-box d-block">
-								<span class="anim-slide">The <span class="text-color-red">Best</span></span>
+								<span class="anim-slide tr-delay-01">Let’s begin our</span>
 							</span>
 							<span class="hidden-box d-block">
-								<span class="anim-slide tr-delay-01">Agency for</span>
+								<span class="anim-slide"><span class="text-color-red">Talks</span></span>
 							</span>
-							<span class="hidden-box d-block">
+
+							<!-- <span class="hidden-box d-block">
 								<span class="anim-slide tr-delay-02">Your Busines</span>
-							</span>
+							</span> -->
 						</h2><!-- title end -->
 						<p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-04">Let's Start a project Together </p>
 					</div>
@@ -325,31 +327,14 @@
 						<!-- content start -->
 						<div class="js-scrollanim">
 							<h2 class="headline-l">
-								<span class="anim-text-double-fill" data-text="Contact">Contact</span>
-								<span class="anim-text-double-fill tr-delay-02" data-text="Us">Us</span>
+								<span class="anim-text-double-fill" data-text="We Can Have A">We Can Have A </span><br>
+								<span class="anim-text-double-fill tr-delay-02" data-text="Coffee at">Coffee at</span>
 							</h2>
 							<!-- <p class="body-text-s margin-top-20 anim-text-reveal tr-delay-04">Pitchfork vaporware hella, vice next level art party subway tile swag portland. Cliche authentic photo booth, seitan sartorial iPhone brooklyn bicycle rights whatever small batch selvage affogato yuccie adaptogen vinyl. Sartorial franzen tacos cardigan, offal gluten-free pour-over snackwave plaid four dollar toast.</p> -->
 						</div><!-- content end -->
 
 						<!-- flex-container start -->
 						<div class="flex-container padding-top-30">
-							<!-- column start -->
-							<div class="four-columns column-50-100 padding-top-60">
-								<div class="column-r-margin-20 js-scrollanim">
-									<p class="headline-xxxxs anim-text-double-fill invert" data-text="Email us">Email us</p>
-									<div class="padding-top-20">
-										<h6 class="anim-fade tr-delay-01">
-											<a href="mailto:hello@thedaxads.com" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">hello@thedaxads.com</a>
-										</h6><br>
-										<!-- <h6 class="anim-fade tr-delay-02">
-											<a href="#" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">email@umaya_job.com</a>
-										</h6><br> -->
-										<!-- <h6 class="anim-fade tr-delay-03">
-											<a href="#" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">email@umaya_agency.com</a>
-										</h6> -->
-									</div>
-								</div>
-							</div><!-- column end -->
 
 							<!-- column start -->
 							<div class="four-columns column-50-100 padding-top-60">
@@ -377,6 +362,23 @@
 									</div>
 								</div>
 							</div><!-- column end -->
+							<!-- column start -->
+							<div class="four-columns column-50-100 padding-top-60">
+								<div class="column-r-margin-20 js-scrollanim">
+									<p class="headline-xxxxs anim-text-double-fill invert" data-text="Email us">Email us</p>
+									<div class="padding-top-20">
+										<h6 class="anim-fade tr-delay-01">
+											<a href="mailto:hello@thedaxads.com" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">hello@thedaxads.com</a>
+										</h6><br>
+										<!-- <h6 class="anim-fade tr-delay-02">
+											<a href="#" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">email@umaya_job.com</a>
+										</h6><br> -->
+										<!-- <h6 class="anim-fade tr-delay-03">
+											<a href="#" class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">email@umaya_agency.com</a>
+										</h6> -->
+									</div>
+								</div>
+							</div><!-- column end -->
 
 							<!-- column start -->
 							<div class="four-columns column-50-100 padding-top-60">
@@ -395,7 +397,7 @@
 						</div><!-- flex-container end -->
 
 						<!-- social btns start -->
-						<div class="padding-top-90">
+						<div class="padding-top-90 ">
 							<ul class="list list_row list_margin-30px js-scrollanim">
 								<li class="list__item anim-fade">
 									<a href="https://www.facebook.com/daxadsofficial" target="_blank" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
