--- a/index.html
+++ b/index.html
@@ -446,9 +446,11 @@
 						<div class="six-columns padding-bottom-20">
 							<div class="column-l-r-margin-10">
 								<p class="body-text-s anim-text-reveal js-scrollanim">
-									We are the DAX innovators who are capable of building and marketing the next generation of products.
+									<!-- We are the DAX innovators who are capable of building and marketing the next generation of products.
 										<br> <br>
-									We also over-deliver our customer expectations with our versatile style of doing work. We specialize in comprehending, creating and conducting digital campaigns across the web, mobile, and social media platforms with a belief that creativity and imaginative thinking blended with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.
+									We also over-deliver our customer expectations with our versatile style of doing work. We specialize in comprehending, creating and conducting digital campaigns across the web, mobile, and social media platforms with a belief that creativity and imaginative thinking blended with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to. -->
+									We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+									We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.
 								</p>
 
 								<!-- list start -->
@@ -814,23 +816,23 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
 										</li> -->
 										<li class="list__item">
-											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
+											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
-									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs text-color-black">You Have a chance to<br>
 										Refine Your Marketing Approach</h3>
 										<p class="body-text-s margin-top-20 text-color-black">
 											2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point ...
 										</p>
 									</a>
-									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
