--- a/about-us.html
+++ b/about-us.html
@@ -394,7 +394,7 @@
 									<ul class="list list_margin-20px margin-top-30">
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill" data-text="Full Stack">Full Stack</div>
+											<div class="headline-xxxxs anim-text-fill" data-text="Full Stack Development">Full Stack Development</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-02" data-text="100%">100%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
 												<div class="progress-bar__line js-progress-animate"></div>
@@ -483,7 +483,7 @@
 						</div>
 
 						<div class="padding-top-30">
-							<img src="assets/images/posts/red-cars/red-coupe-drifting-on-asphalt-road-3608542.jpg" alt="Post">
+							<img src="assets/images/about/about.jpg" alt="Post">
 						</div>
 					</article><!-- entry-content end -->
 
