--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-	<meta property="og:url" content="https://thedaxads.com/"/>
-	<meta property="og:type" content="article"/>
-	<meta property="og:title" content="Dax"/>
-	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="./assets/images/og-logo.png"/>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="DAX">
-	<meta name="description" content="Marketing agency specializing in digital marketing strategies with a focus on all kind of digital marketing and advertising.">
+	<meta charset="utf-8">
+
+	<!-- Primary Meta Tags -->
+	<title>Revolution in digital Space | DAX - Best Digital Marketing Agency </title>
+	<meta name="title" content="Revolution in digital Space | DAX - Best Digital Marketing Agency">
+	<meta name="description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
+	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
+	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too..">
 	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+	<meta name="author" content="DAX - Best Digital Marketing Agency">
+	<meta name="robots" content= "index, follow">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:title" content="Revolution in digital Space | DAX - Best Digital Marketing Agency">
+	<meta property="og:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
+	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
+	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="og:image" content="assets/images/favicon-black.png"/>
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:title" content="Revolution in digital Space | DAX - Best Digital Marketing Agency">
+	<meta property="twitter:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
+	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
+	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
 	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
-		<title>Revolution in digital Space | DAX - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -674,7 +695,7 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
