--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-	<meta property="og:url" content="https://thedaxads.com/"/>
-	<meta property="og:type" content="article"/>
-	<meta property="og:title" content="Dax"/>
-	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="./assets/images/og-logo.png"/>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="DAX">
-	<meta name="description" content="Marketing agency specializing in digital marketing strategies with a focus on all kind of digital marketing and advertising.">
+	<meta charset="utf-8">
+
+	<!-- Primary Meta Tags -->
+	<title>Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency </title>
+	<meta name="title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
+	<meta name="description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
 	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+	<meta name="author" content="DAX - Best Digital Marketing Agency">
+	<meta name="robots" content= "index, follow">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
+	<meta property="og:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="og:image" content="assets/images/favicon-black.png"/>
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
+	<meta property="twitter:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
 	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
-		<title>Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -665,7 +680,7 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
