--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-	<meta property="og:url" content="https://thedaxads.com/"/>
-	<meta property="og:type" content="article"/>
-	<meta property="og:title" content="Dax"/>
-	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="./assets/images/og-logo.png"/>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="DAX">
-	<meta name="description" content="Marketing agency specializing in digital marketing strategies with a focus on all kind of digital marketing and advertising.">
+	<meta charset="utf-8">
+
+	<!-- Primary Meta Tags -->
+	<title>DAX | Blog's - Best Digital Marketing Agency </title>
+	<meta name="title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<meta name="description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
 	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+	<meta name="author" content="DAX - Best Digital Marketing Agency">
+	<meta name="robots" content= "index, follow">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<meta property="og:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="og:image" content="assets/images/favicon-black.png"/>
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<meta property="twitter:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+
+	<!-- favicon -->
+	<link rel="shortcut icon" href="assets/images/favicon-black.png">
+	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
 
 		<!-- favicon -->
 		<link rel="shortcut icon" href="assets/images/favicon-black.png">
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
-			<title>DAX | Blog's - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -178,6 +202,117 @@
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
+		<nav class="nav-container pos-rel js-dropdown-active-box">
+			<!-- pos-rel start -->
+			<div class="pos-rel height-100perc">
+				<!-- dropdown close btn start -->
+				<div class="dropdown-close">
+					<div class="dropdown-close__inner js-dropdown-close js-pointer-large">
+						<span class="dropdown-close__arrow"></span>
+					</div>
+				</div><!-- dropdown close btn end -->
+
+
+				<!-- menu-box start -->
+				<ul class="menu-box">
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Home">Home</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="About">About</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Services">Services</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Academy">Academy</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Client">Client</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Blog">Blog</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="contact.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Contact">Contact</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+				</ul><!-- menu-box end -->
+
+				<!-- nav-information start -->
+				<div class="nav-information">
+					<!-- nav-email start -->
+					<div>
+						<div class="hidden-box d-inline-block">
+							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Email</div>
+						</div>
+						<div class="nav-fade-anim js-nav-anim margin-top-10">
+							<a href="mailto:hello@thedaxads.com" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@thedaxads.com</a><br>
+							<!-- <a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">email@umaya_job.com</a> -->
+						</div>
+					</div><!-- nav-email end -->
+
+					<!-- nav-address start -->
+					<div>
+						<div class="hidden-box d-inline-block">
+							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Address</div>
+						</div>
+						<div class="nav-fade-anim js-nav-anim margin-top-10">
+							<a href="https://g.page/dax-ads-kannur?share" target="_blank" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
+								DAX #1st Floor <br>
+								Arafa Complex, Aarat Road,<br>
+								Kannur, Pin :670001
+							</a>
+						</div>
+					</div><!-- nav-address end -->
+
+					<!-- nav-phone start -->
+					<div>
+						<div class="hidden-box d-inline-block">
+							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Phone</div>
+						</div>
+						<div class="nav-fade-anim js-nav-anim margin-top-10">
+							<a href="tel:919746583440" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9746583440</a><br>
+							<a href="tel:919447774937" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
+						</div>
+					</div><!-- nav-phone end -->
+				</div><!-- nav-information end -->
+
+				<!-- nav-copyright start -->
+				<div class="nav-copyright text-right">
+					<p class="copyright-style nav-fade-anim js-nav-anim">
+						&copy; Copyright 2021 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+					</p>
+				</div><!-- nav-copyright end -->
+			</div><!-- pos-rel end -->
+		</nav><!-- navigation end -->
 
 
 
@@ -631,7 +766,7 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
