--- a/graphic-design.html
+++ b/graphic-design.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-	<meta property="og:url" content="https://thedaxads.com/"/>
-	<meta property="og:type" content="article"/>
-	<meta property="og:title" content="Dax"/>
-	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="./assets/images/og-logo.png"/>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="DAX">
-	<meta name="description" content="Marketing agency specializing in digital marketing strategies with a focus on all kind of digital marketing and advertising.">
+	<meta charset="utf-8">
+
+	<!-- Primary Meta Tags -->
+	<title>Graphic Designing  - DAX | Academy</title>
+	<meta name="title" content="Graphic Designing  - DAX | Academy">
+	<meta name="description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
 	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+	<meta name="author" content="DAX - Best Digital Marketing Agency">
+	<meta name="robots" content= "index, follow">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:title" content="Graphic Designing  - DAX | Academy">
+	<meta property="og:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="og:image" content="assets/images/favicon-black.png"/>
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:title" content="Graphic Designing  - DAX | Academy">
+	<meta property="twitter:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
+	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
 	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
-
-	<title>Graphic Designing  - DAX | Academy </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -781,54 +798,7 @@
 				</div><!-- lines-container end -->
 			</section><!-- about end -->
 
-			<!-- clients start -->
-			<section class="pos-rel section-bg-dark-1">
-				<!-- pos-rel start -->
-				<div class="pos-rel flex-min-height-100vh">
-					<!-- container start -->
-					<div class="padding-top-bottom-10 container">
 
-						<!-- clients-lines start -->
-						<div class="clients-lines ">
-							<!-- clients-lines__column start -->
-							<div class="clients-lines__column">
-								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" alt="clients logo">
-								</div>
-							</div><!-- clients-lines__column end -->
-
-							<!-- clients-lines__column start -->
-							<div class="clients-lines__column">
-								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" alt="clients logo">
-								</div>
-							</div><!-- clients-lines__column end -->
-
-							<!-- clients-lines__column start -->
-							<div class="clients-lines__column">
-								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="clients logo">
-								</div>
-							</div><!-- clients-lines__column end -->
-
-
-							<!-- clients-lines__column start -->
-							<div class="clients-lines__column">
-								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="clients logo">
-								</div>
-							</div><!-- clients-lines__column end -->
-
-
-
-						</div><!-- clients-lines end -->
-					</div><!-- container end -->
-				</div><!-- pos-rel end -->
-			</section><!-- clients end -->
 		</main><!-- main end -->
 
 		<!-- footer start -->
@@ -932,7 +902,7 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
